# vivien-archi-m1

./: README.md  docker-compose.yml  m1.code-workspace  vivien.code-workspace
backend/: Dockerfile  generate_openapi.py  main.py  pyproject.toml
backend-vivien/: .gitignore  grid.html  main.py  pyproject.toml  requirements.txt
backend/models/: __init__.py  grid.py  player.py
backend/repositories/: __init__.py  grid_repository.py
backend/services/: __init__.py  grid_service.py
client/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json
client/src/: App.css  App.jsx  App.tsx  index.css  main.jsx
dev/: install.ps1  install.sh  verify.sh
fastapi_joueurs/: data.py  main.py  models.py
raphael/: raphael.py
yoni/: main.py
