[project]
name = "vivien-backend"
version = "0.0.0"
description = ""
authors = [
    {name = "Vivien Miniussi",email = "vivien.miniussi@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"

dependencies = [
    "fastapi[standard] (>=0.116.1,<0.117.0)",
    "pydantic (>=2.10.6,<3.0.0)",
    "uvicorn (>=0.38.0,<0.39.0)",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.group.dev.dependencies]
black = { version = "^25.1.0", python = ">=3.9" }
pyright = "^1.1.408"
pytest = "^8.3.5"
scipy-stubs = "^1.15.3.0"

[tool.pyright]
# include = [""]
typeCheckingMode = "strict"
venvPath = "."
venv = ".venv"
extraPaths = [".."]
